20Oct99=======================================================================
1. Translated all the subroutines of minimuf into perl as Minimuf.pm
2. Limited the length of an ANN that is saved for de-duping to $pc12_dup_lth
(def 72)
3. help command should now return stuff that you expect.
4. reduced necessary privilege to use 'MSG' command to 6.
18Oct99=======================================================================
1. changed help command so that it works correctly with multiple title lines.
2. added to address to the list of things a message checks to see whether it
is a duplicate (how on earth did it take _this_ long to find this one?).
3. Changes S CC so that the callsign it says it has sent to is the real one.
21Sep99=======================================================================
1. allow zero messages to be stored (request from G4PDQ)
2. make DX more flexible and change spotter syntax to be consistant with
sh/dx (request from K9AN)
30Aug99=======================================================================
1. remove -@ as well as \d from SSIDs for spots
2. remove WEB and/or NET from the front or rear of callsigns in Prefix.pm
29Aug99=======================================================================
1. Added msg command to allow the changing of To, From, Subject and so on the
messages. This seems particularly important just now as a whole raft of G3's
seem to be putting out non private bulls to callsigns.
2. While I am at set messages to TO fields that appear to be users to private
if they have been sent as bulls.
3. Add DISTROs, if a callsign field appears in /spider/msg/distro in upper
use that as a list of callsigns to send further. Note this is potentially
recursive as callsigns in a distro can be distros.
25Aug99=======================================================================
1. check the date of a WWV much more carefully.
24Aug99=======================================================================